# gobang

./: .gitignore  CMakeLists.txt  board.c  gen.c  gobang.c  gobang.h  score.c  test.c
list/: CMakeLists.txt  list.c  list.h  test.c
